--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,4 +40,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://kit.fontawesome.com/332cb44398.js" crossorigin="anonymous"></script>
 </html>
